Entity class, entity related tests in world.cpp, string comparison functions in util.cpp.

--- a/Zork/Zork/Zork.vcxproj.filters
+++ b/Zork/Zork/Zork.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="item.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Util.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="world.h">
