Added Stats struct. Creature is now using Stats.
Previous stats such as health, attack and defence are now stored inside the struct called Stats in order to support any additional stat that may be added to the game without messing up with other Class' constructors.

--- a/Zork/Zork/Zork.vcxproj
+++ b/Zork/Zork/Zork.vcxproj
@@ -140,9 +140,11 @@
     <ClInclude Include="entity_type.h" />
     <ClInclude Include="exit.h" />
     <ClInclude Include="item.h" />
+    <ClInclude Include="item_type.h" />
     <ClInclude Include="nature_type.h" />
     <ClInclude Include="player.h" />
     <ClInclude Include="room.h" />
+    <ClInclude Include="stats.h" />
     <ClInclude Include="util.h" />
     <ClInclude Include="world.h" />
   </ItemGroup>
