--- a/Zork/Zork/Zork.vcxproj.filters
+++ b/Zork/Zork/Zork.vcxproj.filters
@@ -77,5 +77,11 @@
     <ClInclude Include="entity_type.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="item_type.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="stats.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
